@@ -1,5 +1,5 @@
 //
-// Gendarme.Framework.Rocks.AssemblyRocks
+// Gendarme.Framework.Rocks.FieldRocks
 //
 // Authors:
 //	Sebastien Pouliot  <sebastien@ximian.com>
@@ -30,18 +30,29 @@ using Mono.Cecil;
 
 namespace Gendarme.Framework.Rocks {
 
-	public static class AssemblyRocks {
+	public static class FieldRocks {
 
 		/// <summary>
-		/// Check if the assembly contains an attribute of a specified type.
+		/// Check if the field contains an attribute of a specified type.
 		/// </summary>
-		/// <param name="self">The AssemblyDefinition on which the extension method can be called.</param>
+		/// <param name="self">The FieldDefinition on which the extension method can be called.</param>
 		/// <param name="attributeName">Full name of the attribute class</param>
-		/// <returns>True if the assembly contains an attribute of the same name,
+		/// <returns>True if the field contains an attribute of the same name,
 		/// False otherwise.</returns>
-		public static bool HasAttribute (this AssemblyDefinition self, string attributeName)
+		public static bool HasAttribute (this FieldDefinition self, string attributeName)
 		{
 			return self.CustomAttributes.ContainsType (attributeName);
+		}
+
+		/// <summary>
+		/// Check if the field was generated by the compiler or a tool (i.e. not by the developer).
+		/// This can occurs (compiler) with auto-implemented properties (C# 3)
+		/// </summary>
+		/// <param name="self">The FieldDefinition on which the extension method can be called.</param>
+		/// <returns>True if the field was not added directly by the developer, False otherwise</returns>
+		public static bool IsGeneratedCode (this FieldDefinition self)
+		{
+			return self.CustomAttributes.ContainsAnyType (CustomAttributeRocks.GeneratedCodeAttributes);
 		}
 	}
 }
